---
source: crates/symbolicator-proguard/tests/integration/proguard.rs
expression: response
---
exceptions:
  - type: RuntimeException
    module: io.sentry.samples
stacktraces:
  - frames:
      - function: whoops4
        filename: SourceFile
        module: io.sentry.samples.MainActivity$OneMoreInnerClass
        abs_path: SourceFile
        lineno: 38
        pre_context:
          - "        }"
          - "    }"
          - ""
          - "    class OneMoreInnerClass {"
          - "        fun whoops4() {"
        context_line: "            throw RuntimeException(\"whoops\")"
        post_context:
          - "        }"
          - "    }"
          - "}"
          - ""
        index: 0
      - function: whoops3
        filename: MainActivity.kt
        module: io.sentry.samples.MainActivity$AdditionalInnerClass
        abs_path: MainActivity.kt
        lineno: 32
        pre_context:
          - "        }"
          - "    }"
          - ""
          - "    class AdditionalInnerClass {"
          - "        fun whoops3() {"
        context_line: "            OneMoreInnerClass().whoops4()"
        post_context:
          - "        }"
          - "    }"
          - ""
          - "    class OneMoreInnerClass {"
          - "        fun whoops4() {"
        index: 1
      - function: whoops2
        module: io.sentry.samples.MainActivity$AnotherInnerClass
        lineno: 26
        pre_context:
          - "        }"
          - "    }"
          - ""
          - "    class AnotherInnerClass {"
          - "        fun whoops2() {"
        context_line: "            AdditionalInnerClass().whoops3()"
        post_context:
          - "        }"
          - "    }"
          - ""
          - "    class AdditionalInnerClass {"
          - "        fun whoops3() {"
        index: 2
      - function: whoops
        filename: MainActivity.kt
        module: io.sentry.samples.MainActivity$InnerClass
        abs_path: MainActivity.kt
        lineno: 20
        pre_context:
          - "        list.adapter = TrackAdapter()"
          - "    }"
          - ""
          - "    class InnerClass {"
          - "        fun whoops() {"
        context_line: "            AnotherInnerClass().whoops2()"
        post_context:
          - "        }"
          - "    }"
          - ""
          - "    class AnotherInnerClass {"
          - "        fun whoops2() {"
        index: 3
      - function: onCreate
        module: io.sentry.samples.MainActivity
        lineno: 11
        pre_context:
          - ""
          - "class MainActivity : ComponentActivity() {"
          - "    override fun onCreate(savedInstanceState: Bundle?) {"
          - "        super.onCreate(savedInstanceState)"
          - "        setContentView(R.layout.activity_main)"
        context_line: "        InnerClass().whoops()"
        post_context:
          - ""
          - "        val list = findViewById<RecyclerView>(R.id.list)"
          - "        list.layoutManager = LinearLayoutManager(this)"
          - "        list.adapter = TrackAdapter()"
          - "    }"
        index: 4
      - function: differentMethod
        filename: DifferentActivity
        module: DifferentActivity
        abs_path: DifferentActivity
        lineno: 200
        index: 5
      - function: otherMethod
        filename: OtherActivity.java
        module: OtherActivity
        abs_path: OtherActivity.java
        lineno: 100
        index: 6
classes: {}
errors: []
